create form add student

--- a/WebAdmin/Views/Account/UserProfile.cshtml
+++ b/WebAdmin/Views/Account/UserProfile.cshtml
@@ -45,7 +45,7 @@
                                     </div>
                                     <div class="ml-md-4 flex-grow-1">
                                         <div class="d-flex align-items-center mb-1">
-                                            <h4 class="mb-0">@account.lastName @account.firstName</h4>
+                                            <h4 class="mb-0">@account.fullName</h4>
                                         </div>
                                         <p class="mb-0 text-muted">@account.personId</p>
                                     </div>
