--- a/WebAdmin/Views/Shared/P_HeaderVerticalLayout.cshtml
+++ b/WebAdmin/Views/Shared/P_HeaderVerticalLayout.cshtml
@@ -17,7 +17,7 @@
 
         <li class="menu-label">Web Apps</li>
         <li>
-            <a href="emailbox.html">
+            <a asp-controller="Student" asp-action="Index">
                 <div class="parent-icon icon-color-2">
                     <i class='bx bx-category'></i>
                 </div>
