--- a/WebAdmin/Views/Shared/P_HeaderHorizontalLayout.cshtml
+++ b/WebAdmin/Views/Shared/P_HeaderHorizontalLayout.cshtml
@@ -8,10 +8,11 @@
             accountId = User.Claims.FirstOrDefault(c => c.Type == "AccountId")?.Value,
             fullName = User.Claims.FirstOrDefault(c => c.Type == System.Security.Claims.ClaimTypes.Name)?.Value,
             avatar = User.Claims.FirstOrDefault(c => c.Type == "Avatar")?.Value,
-            roles = User.Claims.Where(c => c.Type == System.Security.Claims.ClaimTypes.Role)?.Select(x => x.Value).ToList()
+            roles = User.Claims.Where(c => c.Type == System.Security.Claims.ClaimTypes.Role)?.Select(x => x.Value).ToList(),
         };
     }
 }
+
 
 <header class="top-header">
     <nav class="navbar navbar-expand">
@@ -20,46 +21,58 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     <li class="nav-item dropdown dropdown-user-profile">
-                        <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown">
+                        <a class="nav-link" data-toggle="dropdown">
                             <div class="media user-box align-items-center">
                                 <div class="media-body user-info">
                                     <p class="user-name mb-0">@account.userName</p>
                                 </div>
                                 <img src=@account.avatar class="user-img" alt="user avatar">
-                                @*<img src="~/img/avatar.jpg" class="user-img" alt="user avatar"/>*@
                             </div>
-
                         </a>
-
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="UserProfile">
+                            <a class="dropdown-item" asp-controller="Account" asp-action="UserProfile/1">
                                 <i class="bx bx-user"></i><span>Profile</span>
                             </a>
-                            <a class="dropdown-item" href="javascript:;">
-                                <i class="bx bx-cog"></i><span>Settings</span>
-                            </a>
-                            <a class="dropdown-item" href="javascript:;">
-                                <i class="bx bx-tachometer"></i><span>Dashboard</span>
-                            </a>
-                            <a class="dropdown-item" href="javascript:;">
-                                <i class="bx bx-wallet"></i><span>Earnings</span>
-                            </a>
-                            <a class="dropdown-item" href="javascript:;">
-                                <i class="bx bx-cloud-download"></i><span>Downloads</span>
-                            </a>
+                            
                             <div class="dropdown-divider mb-0"></div>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut">Logout</a>
+                            <a  class="dropdown-item" asp-controller="Account" asp-action="LogOut">
+                                <i class='bx bx-log-out'></i><span>Logout</span></a>
                         </div>
                     </li>
                 }
                 else
                 {
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogIn">Login</a>
-                    </li>
+            <li class="nav-item">
+                <a asp-area="" asp-controller="Account" asp-action="LogIn" class="text-decoration-none">
+                    <div class="media user-box align-items-center">
+                        <div class="media-body user-info">
+                            <p class="user-name mb-0">
+                                Login
+                            </p>
+                        </div>
+                        <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909__340.png" class="user-img" alt="user avatar">
+                    </div>
+                </a>
+            </li>
                 }
 
             </ul>
         </div>
     </nav>
 </header>
+<script>
+    function ShowEditModal(id) {
+        let text = $(elm).html();
+        $(elm).attr('disabled', true); $(elm).html(_loadAnimationSmallHtml);
+        $.get(`/Account/UserProfile/${id}`).done(function (response) {
+            $(elm).attr('disabled', false); $(elm).html(text);
+            if (response.result === 0 || response.result === -1) {
+                CheckResponseIsSuccess(response); return false;
+            }
+        }).fail(function (err) {
+            $(elm).attr('disabled', false); $(elm).html(text);
+            CheckResponseIsSuccess({ result: -1, error: { code: err.status } });
+        });
+    }
+
+</script>
