--- a/WebAdmin/Views/Student/Index.cshtml
+++ b/WebAdmin/Views/Student/Index.cshtml
@@ -48,8 +48,8 @@
                                         <th>Gender</th>
                                         <th>Birthday</th>
                                         <th>Email</th>
-                                        <th>Career</th>
-                                        <th>Nationality</th>
+                                        @*<th>Career</th>
+                                        <th>Nationality</th>*@
                                         <th>Status</th>
                                         <th>Acction</th>
                                     </tr>
@@ -61,8 +61,8 @@
                                         <th>Gender</th>
                                         <th>Birthday</th>
                                         <th>Email</th>
-                                        <th>Career</th>
-                                        <th>Nationality</th>
+                                        @*<th>Career</th>
+                                        <th>Nationality</th>*@
                                         <th>Status</th>
                                         <th>Acction</th>
                                     </tr>
