--- a/WebAdmin/Views/Account/UserProfile.cshtml
+++ b/WebAdmin/Views/Account/UserProfile.cshtml
@@ -9,7 +9,8 @@
             accountId = User.Claims.FirstOrDefault(c => c.Type == "AccountId")?.Value,
             fullName = User.Claims.FirstOrDefault(c => c.Type == System.Security.Claims.ClaimTypes.Name)?.Value,
             avatar = User.Claims.FirstOrDefault(c => c.Type == "Avatar")?.Value,
-            roles = User.Claims.Where(c => c.Type == System.Security.Claims.ClaimTypes.Role)?.Select(x => x.Value).ToList()
+            roles = User.Claims.Where(c => c.Type == System.Security.Claims.ClaimTypes.Role)?.Select(x => x.Value).ToList(),
+            email = User.Claims.FirstOrDefault(c => c.Type == "Email")?.Value
         };
     }
 }
@@ -37,52 +38,87 @@
             <div class="user-profile-page">
                 <div class="card radius-15">
                     <div class="card-body">
-                        <div class="row">
-                            <div class="col-12 col-lg-7 border-right">
-                                <div class="d-md-flex align-items-center">
-                                    <div class="mb-md-0 mb-3">
-                                        <img src=@account.avatar class="rounded-circle shadow" width="130" height="130" alt="" />
-                                    </div>
-                                    <div class="ml-md-4 flex-grow-1">
-                                        <div class="d-flex align-items-center mb-1">
-                                            <h4 class="mb-0">@account.fullName</h4>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+
+                            <div class="row">
+                                <div class="col-12 col-lg-7 border-right">
+                                    <div class="d-md-flex align-items-center">
+                                        <div class="mb-md-0 mb-3">
+                                            <img src=@account.avatar class="rounded-circle shadow" width="130" height="130" alt="" />
                                         </div>
-                                        <p class="mb-0 text-muted">@account.personId</p>
+                                        <div class="ml-md-4 flex-grow-1">
+                                            <div class="d-flex align-items-center mb-1">
+                                                <h4 class="mb-0">@account.fullName</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-lg-5">
+                                    <table class="table table-sm table-borderless mt-md-0 mt-3">
+                                        <tbody>
+                                            <tr>
+                                                <th>Age:</th>
+                                                <td>27</td>
+                                            </tr>
+                                            <tr>
+                                                <th>Email:</th>
+                                                <td>@account.email</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <div class="mb-3 mb-lg-0">
+                                        <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-github'></i></a>
+                                        <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-twitter'></i></a>
+                                        <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-facebook'></i></a>
+                                        <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-linkedin'></i></a>
+                                        <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-dribbble'></i></a>
+                                        <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-stack-overflow'></i></a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-lg-5">
-                                <table class="table table-sm table-borderless mt-md-0 mt-3">
-                                    <tbody>
-                                        <tr>
-                                            <th>Age:</th>
-                                            <td>27</td>
-                                        </tr>
-                                        <tr>
-                                            <th>Email</th>
-                                            <td>@account.email</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <div class="mb-3 mb-lg-0">
-                                    <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-github'></i></a>
-                                    <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-twitter'></i></a>
-                                    <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-facebook'></i></a>
-                                    <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-linkedin'></i></a>
-                                    <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-dribbble'></i></a>
-                                    <a href="javascript:;" class="btn btn-sm btn-link"><i class='bx bxl-stack-overflow'></i></a>
+                        }
+                        else
+                        {
+
+                            <div class="row">
+                                <div class="col-12 col-lg-7 border-right">
+                                    <div class="d-md-flex align-items-center">
+                                        <div class="mb-md-0 mb-3">
+                                            <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909__340.png" class="rounded-circle shadow" width="130" height="130" alt="" />
+                                        </div>
+                                        <div class="ml-md-4 flex-grow-1">
+                                            <div class="d-flex align-items-center mb-1">
+                                                <h4 class="mb-0">User name</h4>
+                                            </div>
+                                            <p class="mb-0 text-muted">@account.personId</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-lg-5">
+                                    <table class="table table-sm table-borderless mt-md-0 mt-3">
+                                        <tbody>
+                                            <tr>
+                                                <th>Age:</th>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Email</th>
+                                                <td></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
-                        </div>
+                        }
                         <!--end row-->
                         <ul class="nav nav-pills">
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#Edit-Profile"><span class="p-tab-name">Edit Profile</span><i class='bx bx-message-edit font-24 d-sm-none'></i></a>
+                                <a class="nav-link" data-toggle="collapse" href="#Edit-Profile"><span class="p-tab-name">Edit Profile</span><i class='bx bx-message-edit font-24 d-sm-none'></i></a>
                             </li>
                         </ul>
                         <div class="tab-content mt-3">
-                            
-                            <div class="tab-pane fade" id="Edit-Profile">
+                            <div  id="Edit-Profile"  class="panel-collapse collapse">
                                 <div class="card shadow-none border mb-0 radius-15">
                                     <div class="card-body">
                                         <div class="form-body">
