--- a/WebAdmin/Views/Student/Index.cshtml
+++ b/WebAdmin/Views/Student/Index.cshtml
@@ -5,6 +5,8 @@
     <partial name="_P_ScriptsTableAndFormBasic" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="~/controller/student_manage.js" asp-append-version="true"></script>
+    <script src="~/assets/libs/select2/js/select2.min.js"></script>
+    <link href="~/assets/libs/select2/css/select2.min.css" rel="stylesheet" />
 }
 
 <div class="wrapper">
@@ -31,7 +33,7 @@
                                         <option class="text-warning" value="0">Khóa</option>
                                     </select>
                                 </div>
-                                
+
                             </div>
                         </div>
                         <div class="col-auto mb-1 px-1">
