--- a/WebAdmin/Views/Student/P_Edit.cshtml
+++ b/WebAdmin/Views/Student/P_Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model EM_Person
+
 s<div class="card radius-15">
     <div class="card-body">
-        <form  asp-action="P_Edit" id="form_data" asp-antiforgery="true">
+        <form asp-action="P_Edit" id="form_data" asp-antiforgery="true">
             <div class="row border-0">
                 <div class="modal-header border-0">
                     <h4 class="modal-title">Update Student</h4>
@@ -47,25 +48,60 @@ s<div class="card radius-15">
                             <option value="">Nationality</option>
                         </select>
                     </div>
-                </div>
-                <div class="col-12 col-lg-6">
-
                     <div class="form-group">
                         <label class="control-label">Religion</label>
                         <select asp-for="religionId" asp-items=" ViewBag.ReligionId" class=" form-control">
                             <option value="">Religion</option>
                         </select>
                     </div>
+                    
+                </div>
+                <div class="col-12 col-lg-6">
                     <div class="form-group">
                         <label class="control-label">Folk</label>
                         <select asp-for="folkId" asp-items="ViewBag.FolkId" id="calc_shipping_folk" class=" form-control">
                             <option value="">Folk</option>
                         </select>
                     </div>
-                    <div class="form-group ">
-                        <label class="control-label">Address</label>
-                        <input asp-for="addressId" class="form-control" placeholder="Address">
+                    <div class="form-group" id="div_form_province">
+                        <span class="has-float-label">
+                            <label asp-for="addressObj.provinceId">Tỉnh - Thành phố</label>
+                            <select asp-for="addressObj.provinceId" asp-items="ViewBag.ProvinceId"
+                                    class="select2 form-control" onchange="LoadDistrict(this, '#div_form_district', '#form_data')">
+                                <option value="0">--Chọn--</option>
+                            </select>
+                        </span>
+                        <span asp-validation-for="addressObj.provinceId" class="invalid-feedback"></span>
                     </div>
+                    <div class="form-group" id="div_form_district">
+                        <span class="has-float-label">
+                            <label asp-for="addressObj.districtId">Quận - Huyện</label>
+                            <select asp-for="addressObj.districtId" asp-items="ViewBag.DistrictId"
+                                    class="select2 form-control" onchange="LoadWard(this, '#div_form_ward', '#form_data')">
+                                <option value="0">--Chọn--</option>
+                            </select>
+                        </span>
+                        <span asp-validation-for="addressObj.districtId" class="invalid-feedback"></span>
+                    </div>
+                    <div class="form-group" id="div_form_ward">
+                        <span class="has-float-label">
+                            <label asp-for="addressObj.wardId">Phường - Xã</label>
+                            <select asp-for="addressObj.wardId" asp-items="ViewBag.WardId" class="select2 form-control">
+                                <option value="0">--Chọn--</option>
+                            </select>
+                        </span>
+                        <span asp-validation-for="addressObj.wardId" class="invalid-feedback"></span>
+                    </div>
+                    <div class="form-group">
+                        <span class="has-float-label">
+                            <label asp-for="addressObj.addressText">Số nhà/tổ/khu phố</label>
+                            <input asp-for="addressObj.addressText" class="form-control" maxlength="150" placeholder="eg: C20 Hẻm số 40 Đường Nguyễn Du" />
+
+                        </span>
+                        <span asp-validation-for="addressObj.addressText" class="invalid-feedback"></span>
+                    </div>
+
+
                     <div class="form-group">
                         <label class="control-label">Phone Number</label>
                         <input asp-for="phoneNumber" class="form-control" placeholder="Phone number">
@@ -75,11 +111,11 @@ s<div class="card radius-15">
                         <input asp-for="email" class="form-control" placeholder="Email">
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <input type="button" value="Cancel" class="btn btn-outline-secondary waves-effect " onclick="BackToTable('#div_main_table', '#div_view_panel');" />
-                    <input type="submit" class="btn btn-success" value="Update">
-                </div>
+            <div class="modal-footer">
+                <input type="button" value="Cancel" class="btn btn-outline-secondary waves-effect " onclick="BackToTable('#div_main_table', '#div_view_panel');" />
+                <input type="submit" class="btn btn-success" value="Update">
             </div>
-        </form>
     </div>
+    </form>
+</div>
 </div>
