--- a/WebAdmin/Views/Student/Index.cshtml
+++ b/WebAdmin/Views/Student/Index.cshtml
@@ -50,8 +50,8 @@
                                         <th>Gender</th>
                                         <th>Birthday</th>
                                         <th>Email</th>
-                                        @*<th>Career</th>
-                                        <th>Nationality</th>*@
+                                        <th>Career</th>
+                                        <th>Nationality</th>
                                         <th>Status</th>
                                         <th>Acction</th>
                                     </tr>
@@ -63,8 +63,8 @@
                                         <th>Gender</th>
                                         <th>Birthday</th>
                                         <th>Email</th>
-                                        @*<th>Career</th>
-                                        <th>Nationality</th>*@
+                                        <th>Career</th>
+                                        <th>Nationality</th>
                                         <th>Status</th>
                                         <th>Acction</th>
                                     </tr>
