--- a/WebAdmin/Views/Shared/_LayoutMaster.cshtml
+++ b/WebAdmin/Views/Shared/_LayoutMaster.cshtml
@@ -6,13 +6,31 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Syndash - Bootstrap4 Admin Template</title>
+    <title>@ViewData["Title"]</title>
     <link rel="icon" href="~/assets/images/favicon-32x32.png" type="image/png" />
     <link href="~/assets/plugins/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" />
     <link href="~/assets/plugins/simplebar/css/simplebar.css" rel="stylesheet" />
-    <link href="~/assets/plugins/metismenu/css/metisMenu.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/assets/css/icons.css" />
+    <link rel="stylesheet" href="~/assets/css/app.css" />
+    <link rel="stylesheet" href="~/assets/css/dark-sidebar.css" />
+    <link rel="stylesheet" href="~/assets/css/dark-theme.css" />
+
+    <link rel="icon" href="~/assets/images/favicon-32x32.png" type="image/png" />
+    <!-- Vector CSS -->
+    <link href="~/assets/plugins/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" />
+    <!--plugins-->
+    <link href="~/assets/plugins/simplebar/css/simplebar.css" rel="stylesheet" />
+    <link href="~/assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" />
+    <link href="~/assets/plugins/metismenu/css/metisMenu.min.css" rel="stylesheet" />
+    <!-- loader-->
+    <link href="~/assets/css/pace.min.css" rel="stylesheet" />
+    <script src="~/assets/js/pace.min.js"></script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="~/assets/css/bootstrap.min.css" />
+    <!-- Icons CSS -->
+    <link rel="stylesheet" href="~/assets/css/icons.css" />
+    <!-- App CSS -->
     <link rel="stylesheet" href="~/assets/css/app.css" />
     <link rel="stylesheet" href="~/assets/css/dark-sidebar.css" />
     <link rel="stylesheet" href="~/assets/css/dark-theme.css" />
@@ -22,14 +40,20 @@
     <link href="~/assets/libs/izi-toast-mater/css/iziToast.min.css" rel="stylesheet" />
     <link href="~/assets/libs/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
 
+    <link href="~/assets/plugins/metismenu/css/metisMenu.min.css" rel="stylesheet" />
+
+    <link href="~/assets/css/pretty-checkbox.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.1.96/css/materialdesignicons.min.css" integrity="sha512-NaaXI5f4rdmlThv3ZAVS44U9yNWJaUYWzPhvlg5SC7nMRvQYV9suauRK3gVbxh7qjE33ApTPD+hkOW78VSHyeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     @await RenderSectionAsync("Styles", required: false)
 </head>
 
 <body>
-    <partial name="P_HeaderVerticalLayout" />
-    <partial name="P_HeaderHorizontalLayout" />
+   
 
-    <div>
+    <div class="wrapper">
+        <partial name="P_HeaderVerticalLayout" />
+        <partial name="P_HeaderHorizontalLayout" />
         <main role="main">
             @RenderBody()
         </main>
@@ -38,21 +62,23 @@
     <script src="~/assets/js/jquery.min.js"></script>
     <script src="~/assets/js/popper.min.js"></script>
     <script src="~/assets/js/bootstrap.min.js"></script>
+    <!--plugins-->
     <script src="~/assets/plugins/simplebar/js/simplebar.min.js"></script>
     <script src="~/assets/plugins/metismenu/js/metisMenu.min.js"></script>
-    @*<script src="~/assets/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>*@
+    <script src="~/assets/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
+    <!-- Vector map JavaScript -->
+    <!-- App JS -->
+    <script src="~/assets/js/app.js"></script>
+    @*<script>
+            new PerfectScrollbar('.dashboard-social-list');
+            new PerfectScrollbar('.dashboard-top-countries');
+        </script>*@
 
 
-    @*<script src="~/assets/js/app.js"></script>*@
-    
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/assets/libs/moment/min/moment.min.js"></script>
     <script src="~/assets/libs/izi-toast-mater/js/iziToast.min.js"></script>
     <script src="~/assets/libs/sweetalert2/sweetalert2.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/utility_lib.js"></script>
-
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
