--- a/WebAdmin/Views/Student/P_Add.cshtml
+++ b/WebAdmin/Views/Student/P_Add.cshtml
@@ -10,12 +10,12 @@
                 <div class="col-12 col-lg-6 border-right">
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label class="control-label">First Name</label>
-                            <input asp-for="firstName" class="form-control " placeholder="First name">
-                        </div>
-                        <div class="form-group col-md-6">
                             <label class="control-label">Last Name</label>
                             <input asp-for="lastName" class="form-control" placeholder="Last Name">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label class="control-label">First Name</label>
+                            <input asp-for="firstName" class="form-control " placeholder="First name">
                         </div>
                     </div>
                     <div class="form-group">
@@ -39,7 +39,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
 
                     <div class="form-group">
                         <label class="control-label">Person Type</label>
@@ -57,6 +57,12 @@
                     <div class="form-group">
                         <label class="control-label">Folk</label>
                         <select asp-for="folkId" asp-items="ViewBag.FolkId" class="form-control select2" style="width:100%">
+                            <option value="0">--Chọn--</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Nationality</label>
+                        <select asp-for="nationalityId" asp-items="ViewBag.NationalityId" class="form-control select2" style="width:100%">
                             <option value="0">--Chọn--</option>
                         </select>
                     </div>
