--- a/WebAdmin/Views/Student/P_Edit.cshtml
+++ b/WebAdmin/Views/Student/P_Edit.cshtml
@@ -3,24 +3,22 @@
 s<div class="card radius-15">
     <div class="card-body">
         <form asp-action="P_Edit" id="form_data" asp-antiforgery="true">
+            <input type="hidden" asp-for="status"/>
+            <input type="hidden" asp-for="timer" value="@Model.timer?.ToString("O")"/>
+            <input type="hidden" asp-for="id"/>
             <div class="row border-0">
                 <div class="modal-header border-0">
                     <h4 class="modal-title">Update Student</h4>
                 </div>
                 <div class="col-12 col-lg-6 border-right">
-
-                    <div class="form-group">
-                        <label asp-for="id" class="control-label"></label>
-                        <input asp-for="id" class="form-control" readonly>
-                    </div>
                     <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label class="control-label">First Name</label>
-                            <input asp-for="firstName" class="form-control " placeholder="First name">
-                        </div>
                         <div class="form-group col-md-6">
                             <label class="control-label">Last Name</label>
                             <input asp-for="lastName" class="form-control" placeholder="Last Name">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label class="control-label">First Name</label>
+                            <input asp-for="firstName" class="form-control " placeholder="First name">
                         </div>
                     </div>
                     <div class="form-group">
