--- a/WebAdmin/Views/Shared/P_HeaderVerticalLayout.cshtml
+++ b/WebAdmin/Views/Shared/P_HeaderVerticalLayout.cshtml
@@ -17,6 +17,14 @@
 
         <li class="menu-label">Web Apps</li>
         <li>
+            <a asp-controller="Home" asp-action="Index">
+                <div class="parent-icon icon-color-3">
+                    <i class="bx bx-home"></i>
+                </div>
+                <div class="menu-title">Home</div>
+            </a>
+        </li>
+        <li>
             <a asp-controller="Student" asp-action="Index">
                 <div class="parent-icon icon-color-2">
                     <i class='bx bx-category'></i>
@@ -25,11 +33,11 @@
             </a>
         </li>
         <li>
-            <a href="chat-box.html">
-                <div class="parent-icon icon-color-3">
-                    <i class="bx bx-conversation"></i>
+            <a asp-controller="Student" asp-action="Index">
+                <div class="parent-icon icon-color-2">
+                    <i class='bx bx-category'></i>
                 </div>
-                <div class="menu-title">Chat Box</div>
+                <div class="menu-title">Teacher Management</div>
             </a>
         </li>
     </ul>
