--- a/WebAdmin/Views/Shared/_LayoutMaster.cshtml
+++ b/WebAdmin/Views/Shared/_LayoutMaster.cshtml
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-   
+
 
     <div class="wrapper">
         <partial name="P_HeaderVerticalLayout" />
@@ -57,6 +57,13 @@
         <main role="main">
             @RenderBody()
         </main>
+    </div>
+    <div class="overlay toggle-btn-mobile"></div>
+    <a href="javaScript:;" class="back-to-top"><i class='bx bxs-up-arrow-alt'></i></a>
+    <div class="footer">
+        <p class="mb-0">
+            Syndash 200 | Developed By : <a href="https://themeforest.net/user/codervent" target="_blank">codervent</a>
+        </p>
     </div>
 
     <script src="~/assets/js/jquery.min.js"></script>
