done student manage

--- a/WebAdmin/Views/Shared/P_HeaderVerticalLayout.cshtml
+++ b/WebAdmin/Views/Shared/P_HeaderVerticalLayout.cshtml
@@ -27,17 +27,9 @@
         <li>
             <a asp-controller="Student" asp-action="Index">
                 <div class="parent-icon icon-color-2">
-                    <i class='bx bx-category'></i>
+                    <i class='bx bx-cog'></i>
                 </div>
                 <div class="menu-title">Student Management</div>
-            </a>
-        </li>
-        <li>
-            <a asp-controller="Student" asp-action="Index">
-                <div class="parent-icon icon-color-2">
-                    <i class='bx bx-category'></i>
-                </div>
-                <div class="menu-title">Teacher Management</div>
             </a>
         </li>
     </ul>
