--- a/WebAdmin/Views/Home/Index.cshtml
+++ b/WebAdmin/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                                 <div class="card-body">
                                     <div class="d-flex mb-2">
                                         <div>
-                                            <p class="mb-0 font-weight-bold">Số lượng sinh viên</p>
+                                            <p class="mb-0 font-weight-bold">ABC</p>
                                             <h2 class="mb-0">501</h2>
                                         </div>
                                         <div class="ml-auto align-self-end">
@@ -35,7 +35,7 @@
                                 <div class="card-body">
                                     <div class="d-flex mb-2">
                                         <div>
-                                            <p class="mb-0 font-weight-bold">Visitors</p>
+                                            <p class="mb-0 font-weight-bold">ABC</p>
                                             <h2 class="mb-0">409</h2>
                                         </div>
                                         <div class="ml-auto align-self-end">
@@ -53,7 +53,7 @@
                                 <div class="card-body">
                                     <div class="d-flex mb-2">
                                         <div>
-                                            <p class="mb-0 font-weight-bold">Page Views</p>
+                                            <p class="mb-0 font-weight-bold">ABC</p>
                                             <h2 class="mb-0">2,346</h2>
                                         </div>
                                         <div class="ml-auto align-self-end">
