--- a/WebAdmin/Views/Student/Index.cshtml
+++ b/WebAdmin/Views/Student/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Student";
 }
-
 @section Styles{
     <partial name="_P_StylesTableAndFormBasic" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -26,50 +25,66 @@
                             <h5 class="mb-0">Manage Student </h5>
                         </div>
                         <hr />
-                        <div class="col-xl-3 col-lg-2 col-md-6 mb-1 px-1">
-                            <div class="input-group input-group-sm">
-                                <div class="input-group-prepend">
-                                    <label class="input-group-text col-auto mb-1 px-1" for="select_search_status">
-                                        <i class="material-icons">&#xf023;</i>Trạng thái
+                        <div>
+                            <div class="input-group">
+                                <div class="input-group-append">
+                                    <label class="col-md-auto mb-1 px-1 input-group-text rounded-start" for="select_search_status">
+                                        Trạng thái
                                     </label>
-                                    <select id="select_search_status" class="col-md-5 rounded mb-1 px-1"
-                                            onchange="SearchStatus()"
-                                            data-live-search="false">
-                                        <option value="0,1">--Tất cả--</option>
-                                        <option class="text-success" value="1">Mở</option>
-                                        <option class="text-warning" value="0">Khóa</option>
-                                    </select>
-                                    <div class="col-auto mb-1 px-1">
-                                        <a href="#addNewPersonModal" class="btn btn-outline-info" onclick="ShowAddModal(this)"><i class="material-icons">&#xE147;</i> <span>Add New Student</span></a>
-                                        <button class="btn btn-outline-dark" onclick="LoadDataTable()"><i class="material-icons">&#xe5d5;</i> <span>Load</span></button>
-                                    </div>
+                                </div>
+                                <select id="select_search_status" class="col-md-auto rounded-end mb-1 px-1"
+                                        onchange="SearchStatus()"
+                                        data-live-search="false">
+                                    <option value="0,1">--Tất cả--</option>
+                                    <option class="text-success" value="1">Mở</option>
+                                    <option class="text-warning" value="0">Khóa</option>
+                                </select>
+                                <div class="input-group-append pl-2">
+                                    <label class="col-md-auto mb-1 px-1 input-group-text rounded-start" for="select_search_persontype">
+                                        Nghề nghiệp
+                                    </label>
+                                </div>
+                                <select id="select_search_persontype" onchange="SearchStatus()"
+                                        data-live-search="false"
+                                        class="col-md-auto rounded-end mb-1 px-1">
+                                    <option value="1,2">--Tất cả--</option>
+                                    <option class="text-success" value="1">Sinh viên</option>
+                                    <option class="text-warning" value="2">Giảng viên</option>
+                                </select>
+                                <div class="col-12 col-lg-auto">
+                                    <a href="#addNewPersonModal" class="btn btn-outline-info" onclick="ShowAddModal(this)"><i class="material-icons">&#xE147;</i> <span>Add New Student</span></a>
+                                    <button class="btn btn-outline-dark" onclick="LoadDataTable()"><i class="material-icons">&#xe5d5;</i> <span>Load</span></button>
+
                                 </div>
                             </div>
-                        </div>
-                        <div class="table-responsive">
 
-                            <table class="table mb-0 w-100 uk-table uk-table-hover uk-table-striped uk-table-middle table-bordered" id="table_main">
-                                <thead>
-                                    <tr style="background-color: rgb(78, 173, 207)">
-                                        <th>Stt</th>
-                                        <th>Họ và tên</th>
-                                        <th>Giới tính</th>
-                                        <th>Ngày sinh</th>
-                                        <th>Địa chỉ Email</th>
-                                        <th>Quốc tịch</th>
-                                        <th>Trang thái</th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tfoot>
-                                </tfoot>
-                            </table>
+
                         </div>
+                    </div>
+                    <div class="table-responsive pl-2">
+
+                        <table class="table mb-0 w-100 uk-table uk-table-hover uk-table-striped uk-table-middle table-bordered" id="table_main">
+                            <thead>
+                                <tr style="background-color: rgb(78, 173, 207)">
+                                    <th>Stt</th>
+                                    <th>Họ và tên</th>
+                                    <th>Giới tính</th>
+                                    <th>Ngày sinh</th>
+                                    <th>Địa chỉ Email</th>
+                                    <th>Quốc tịch</th>
+                                    <th>Trang thái</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tfoot>
+                            </tfoot>
+                        </table>
                     </div>
                 </div>
             </div>
-            <div class="card-body card_background_detail" id="div_view_panel" style="display:none;"></div>
         </div>
+        <div class="card-body card_background_detail" id="div_view_panel" style="display:none;"></div>
     </div>
+</div>
 
 </div>
