--- a/WebAdmin/wwwroot/css/site.css
+++ b/WebAdmin/wwwroot/css/site.css
@@ -16,3 +16,14 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+
+@media screen and (max-width: 1024px) {
+    #vantajs {
+        max-height: 100vh;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+}
